fix: bigger images on mobile

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -5,7 +5,7 @@
 
 @layer components {
     .bingo-card {
-        @apply bg-white p-4 text-center aspect-square border-2 border-gray-300 border-dashed first:border-l-0 last:border-r-0 align-top border-b-0;
+        @apply bg-white p-1 text-center aspect-square border-2 border-gray-300 border-dashed first:border-l-0 last:border-r-0 align-top border-b-0;
         width: 150px;
     }
 
